# Holistic-CLIP

synthetic_caption/: abci_run.sh  internvl_simple.py  pyproject.toml
