[project]
name = "synthetic-caption"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.0"
dependencies = [
    "datasets>=4.4.1",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "tqdm>=4.64.0",
    "transformers>=4.18.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]
torchaudio = [{ index = "pytorch-cu118" }]

[[tool.uv.index]]
name     = "pytorch-cu118"
url      = "https://download.pytorch.org/whl/cu118"
explicit = true
